egonlang-core/res/examples/invalid/fn_expr_type_mismatch_in_body_undefined_identifier.eg
(a: string): number => { b };

// out: TypeError: mismatched types: expected type `number` but received `identifier`